add adaptive fonts

--- a/src/index.html
+++ b/src/index.html
@@ -68,21 +68,23 @@
     <div class="exp">
         <div class="container-fluid">
             <div class="exp-wrap">
-                <div class="exp-text">
-                    <h4 class="exp-title">
-                        5+ years of experience
-                    </h4>
-                    <div class="exp-descr">
-                        <p>
-                            Focus on the business goals of your product
-                            <br><br>
-                            Also I relish the opportunity to be involved in projects at the concept stage where 
-                        </p>
+                <div class="exp-block">
+                    <div class="exp-text">
+                        <h4 class="exp-title">
+                            5+ years of <br> experience
+                        </h4>
+                        <div class="exp-descr">
+                            <p>
+                                Focus on the business goals of your product
+                                <br><br>
+                                Also I relish the opportunity to be involved in projects at the concept stage where 
+                            </p>
+                        </div>
                     </div>
-                </div>
-
-                <div class="exp-image">
-                    <img src="img/expirienc-image.png" alt="">
+    
+                    <div class="exp-image">
+                        <img src="img/expirienc-image.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
