--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <meta name="title" content="Заголовок">
@@ -88,37 +88,26 @@
         </div>
     </div>
 
+    <div class="partner">
+        <div class="container">
+            <div class="partner-wrap">
+                <div class="partner-card">
+                    <img src="icons/lg.png" alt="">
+                </div>
+                <div class="partner-card">
+                    <img src="icons/dtek.png" alt="">
+                </div>
+                <div class="partner-card">
+                    <img src="icons/lg.png" alt="">
+                </div>
+                <div class="partner-card">
+                    <img src="icons/dtek.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="js/script.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
-    <script>
-SmoothScroll({
-    // Время скролла 400 = 0.4 секунды
-    animationTime    : 1100,
-    // Размер шага в пикселях 
-    stepSize         : 75,
-
-    // Дополнительные настройки:
-    
-    // Ускорение 
-    accelerationDelta : 25,  
-    // Максимальное ускорение
-    accelerationMax   : 2,   
-
-    // Поддержка клавиатуры
-    keyboardSupport   : true,  
-    // Шаг скролла стрелками на клавиатуре в пикселях
-    arrowScroll       : 250,
-
-    // Pulse (less tweakable)
-    // ratio of "tail" to "acceleration"
-    pulseAlgorithm   : true,
-    pulseScale       : 4,
-    pulseNormalize   : 1,
-
-    // Поддержка тачпада
-    touchpadSupport   : true,
-})
-    </script>
 </body>
 </html>
