add first version adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,7 @@
         </div>
     </div>
 
+
     <div class="partner">
         <div class="container">
             <div class="partner-wrap">
@@ -102,6 +103,9 @@
                 </div>
                 <div class="partner-card">
                     <img src="icons/dtek.png" alt="">
+                </div>
+                <div class="partner-card">
+                    <img src="icons/lg.png" alt="">
                 </div>
             </div>
         </div>
