--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         </div>
     </header>
     <div class="exp">
-        <div class="container-fluid">
+        <div class="container">
             <div class="exp-wrap">
                     <div class="exp-text">
                         <h4 class="exp-title">
@@ -87,10 +87,8 @@
             </div>
         </div>
     </div>
-
-
     <div class="partner">
-        <div class="container">
+        <div class="container-fluid">
             <div class="partner-wrap">
                 <div class="partner-card">
                     <img src="icons/lg.png" alt="">
@@ -108,6 +106,22 @@
                     <img src="icons/lg.png" alt="">
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="focus">
+        <div class="focus-card">
+            <div class="focus-title">
+                Focus on the business goals of your product
+            </div>
+
+                <div class="focus-btn">
+                    <div class="focus-image">
+
+                    </div>
+                    <span>
+
+                    </span>
+                </div>
         </div>
     </div>
 
