add first  version full adaptive\add menu js

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,25 @@
     <link rel="stylesheet" href="font/stylesheet.css">
 </head>
 <body>
-
+    <div class="menu">
+        <div class="container-fluid">
+            <div class="menu-wrap">
+                <ul class="nav-list nav-list__mob">
+                    <li class="nav-list-item"><a href="#">Mentoring</a><span class="nav-list-item__sale">SALE</span></li>
+                    <li class="nav-list-item"><a href="#">Free 3D Icons</a></li>
+                </ul>
+        
+                <div class="nav-social nav-social__mob">
+                    <a href="#" class="nav-social__link"><img src="icons/Link.svg" alt=""></a>
+                    <a href="#" class="nav-social__link"><img src="icons/dribbbl.svg" alt=""></a>
+                    <a href="#" class="nav-social__link"><img src="icons/Behans.svg" alt=""></a>
+                    <a href="#" class="nav-social__link"><img src="icons/Telegram.svg" alt=""></a>
+                </div>
+        
+                <a href="#" class="menu-btn">Contact me</a>
+            </div>
+        </div>
+    </div>
     <nav class="nav">
         <div class="container-fluid">
             <div class="nav-wrap">
@@ -46,6 +64,10 @@
                     <a href="#" class="nav-social__link"><img src="icons/dribbbl.svg" alt=""></a>
                     <a href="#" class="nav-social__link"><img src="icons/Behans.svg" alt=""></a>
                     <a href="#" class="nav-social__link"><img src="icons/Telegram.svg" alt=""></a>
+                </div>
+
+                <div class="nav-toggle">
+                    <span></span>
                 </div>
             </div>
         </div>
