add first version boost-btn animate

--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,11 @@
                             I'm constantly searching for innovative ideas in order to deliver what is the best in terms of interaction and user experience. 
                         </p>
                     </div>
-                   <a href="#" class="boost-btn">I WANT BE A PRO</a>
+                   <a href="#" class="boost-btn">
+                       <span class="boost-btn_1"></span>
+                       <span class="boost-btn_2"></span>
+                       I WANT BE A PRO
+                    </a>
                 </div>
             </div>
         </div>
