--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="font/stylesheet.css">
+    <link rel="stylesheet" href="css/queryLoader.css" type="text/css">
 </head>
 <body>
     <div class="menu">
@@ -231,8 +232,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    
+    </div>  
     <div class="footer">
         <div class="container-fluid">
             <div class="footer-wrap">
@@ -282,7 +282,20 @@
             </div>
         </div>
     </div>
+
+
+    <div class="preloader">
+
+    </div>
+
+    <!-- <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js'></script>
+    <script type='text/javascript' src='js/queryLoader.js'></script> -->
     <script src="js/script.js"></script>
+<!-- 
+
+    <script type='text/javascript'>
+        QueryLoader.init();
+        </script> -->
 </body>
 </html>
 
