add discuss-btn animation

--- a/src/index.html
+++ b/src/index.html
@@ -228,7 +228,15 @@
                 </div>
 
                 <div class="discuss-btn">
-                    <span>Tap on me</span>
+                    <span class="discuss-btn_hover">
+                        <span class="discuss-btn__text">
+                            Tap on me
+                        </span>
+                    </span>
+
+                    <span class="discuss-btn_1"></span>
+                    <span class="discuss-btn_2"></span>
+                    <span class="discuss-btn_3"></span>
                 </div>
             </div>
         </div>
@@ -288,14 +296,7 @@
 
     </div>
 
-    <!-- <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js'></script>
-    <script type='text/javascript' src='js/queryLoader.js'></script> -->
     <script src="js/script.js"></script>
-<!-- 
-
-    <script type='text/javascript'>
-        QueryLoader.init();
-        </script> -->
 </body>
 </html>
 
