--- a/src/index.html
+++ b/src/index.html
@@ -293,10 +293,17 @@
 
 
     <div class="preloader">
-
+        <div class="preloader-title">
+            Wake up, samurai...
+        </div>
+        <div class="preloader-timer">
+            76%
+        </div>
     </div>
 
     <script src="js/script.js"></script>
+    <script type="module" src="js/queryLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
 
