add first block animate

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="font/stylesheet.css">
-    <link rel="stylesheet" href="css/queryLoader.css" type="text/css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div class="menu">
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <nav class="nav">
+    <nav class="nav ">
         <div class="container-fluid">
             <div class="nav-wrap">
                 <div class="nav-logo">
@@ -80,13 +80,13 @@
     <header class="header">
         <div class="container-fluid">
             <div class="header-wrap">
-                <h3 class="header-name">
+                <h3 class="header-name text__animation_1">
                     Hi! I’m Vadim,
                 </h3>
-                <h1 class="header-title">
+                <h1 class="header-title text__animation_1">
                     ui/ux designer
                 </h1>
-                <h3 class="header-subtitle">
+                <h3 class="header-subtitle text__animation_1">
                     ...for people who live on planet earth
                 </h3>
             </div>
@@ -300,9 +300,10 @@
             76%
         </div>
     </div>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
     <script type="module" src="js/queryLoader.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
