add new 2.0 version first block animate

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
                 <ul class="nav-list">
                     <li class="nav-list-item"><a href="#">Mentoring</a><span class="nav-list-item__sale">SALE</span></li>
-                    <li class="nav-list-item"><a href="#">Free 3D Icons</a></li>
+                    <li class="nav-list-item"><a href="#">Design Resources</a></li>
                 </ul>
 
                 <div class="nav-social">
@@ -83,7 +83,7 @@
                 <h3 class="header-name text__animation_1">
                     Hi! I’m Vadim,
                 </h3>
-                <h1 class="header-title text__animation_1">
+                <h1 class="header-title text__animation_2">
                     ui/ux designer
                 </h1>
                 <h3 class="header-subtitle text__animation_1">
@@ -101,9 +101,7 @@
                         </h4>
                         <div class="exp-descr">
                             <p>
-                                Focus on the business goals of your product
-                                <br><br>
-                                Also I relish the opportunity to be involved in projects at the concept stage where 
+                                I have a passion for designing interfaces that solve user problems. And I will gladly solve your problem because this world needs to be made better.
                             </p>
                         </div>
                     </div>
@@ -138,7 +136,7 @@
     <div class="focus">
         <div class="focus-card">
             <div class="focus-title">
-                Focus on the business goals of your product
+                I focus on the business goals of your product
             </div>
             <div class="focus-pepe">
                 <div class="focus-image">
@@ -204,11 +202,11 @@
             <div class="boost-wrap">
                 <div class="boost-text">
                     <div class="boost-title">
-                        Want boost your UI/UX skills?
+                        Want to boost your UI/UX skills?
                     </div>
                     <div class="boost-descr">
                         <p>
-                            I'm constantly searching for innovative ideas in order to deliver what is the best in terms of interaction and user experience. 
+                            If you are a beginner but want to become a professional and successful designer, then I will help you
                         </p>
                     </div>
                    <a href="#" class="boost-btn">
@@ -244,8 +242,13 @@
     <div class="footer">
         <div class="container-fluid">
             <div class="footer-wrap">
-                <div class="footer-name">
-                    Portfolio 2021
+                <div class="footer-block-wrap">
+                    <div class="footer-name">
+                        Portfolio 2021
+                    </div>
+                    <div class="footer-dev">
+                        Frontend developing by italik
+                    </div>
                 </div>
                 <div class="footer-social">
                     <a href="mailto:vadim.uiux@gmail.com" class="footer-email">vadim.uiux@gmail.com</a>
