--- a/src/404.html
+++ b/src/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ui/ux designer</title>
+    <title>404</title>
     <meta name="title" content="Заголовок">
     <meta name="description" content="Онисание">
 
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <nav class="nav ">
+    <nav class="nav">
         <div class="container-fluid">
             <div class="nav-wrap">
                 <div class="nav-logo">
@@ -107,147 +107,23 @@
             </div>
         </div>
     </nav>
-    <header class="header">
-        <div class="container-fluid">
-            <div class="header-wrap">
-                <h3 class="header-name text__animation_1">
-                    Hi! I’m Vadim,
-                </h3>
-                <h1 class="header-title text__animation_2">
-                    ui/ux designer
-                </h1>
-                <h3 class="header-subtitle text__animation_1">
-                    ...for people who live on planet earth
-                </h3>
-            </div>
-        </div>
-    </header>
-    <div class="exp">
-        <div class="container">
-            <div class="exp-wrap">
-                    <div class="exp-text">
-                        <h4 class="exp-title">
-                            5+ years of <br> experience
-                        </h4>
-                        <div class="exp-descr">
-                            <p>
-                                I have a passion for designing interfaces that solve user problems. And I will gladly solve your problem because this world needs to be made better.
-                            </p>
-                        </div>
-                    </div>
-    
-                    <div class="exp-image">
-                        <img src="img/expirienc-image.png" alt="">
-                    </div>
-            </div>
-        </div>
-    </div>
-    <div class="partner">
-        <div class="container-fluid">
-            <div class="partner-wrap">
-                <div class="partner-card">
-                    <img src="icons/lg.png" alt="">
-                </div>
-                <div class="partner-card">
-                    <img src="icons/dtek.png" alt="">
-                </div>
-                <div class="partner-card">
-                    <img src="icons/lg.png" alt="">
-                </div>
-                <div class="partner-card mb0">
-                    <img src="icons/dtek.png" alt="">
-                </div>
-                <div class="partner-card mb0">
-                    <img src="icons/lg.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="focus">
-        <div class="focus-card">
-            <div class="focus-title">
-                I focus on the business goals of your product
-            </div>
-            <div class="focus-pepe">
-                <div class="focus-image">
-                    <img src="img/pepe-1.gif" alt="">
-                </div>
-                <div class="focus-btn">
-                    <span>
 
-                    </span>
-                </div>
-            </div>
 
+    <div class="main-404">
+      <div class="container">
+        <div class="main-404-wrap">
+          <div class="main-404__title">
+            404
+          </div>
+          <div class="main-404__subtitle">
+            Something went wrong
+          </div>
+          <a href="index.html" class="main-404__btn">Go to the homepage</a>
         </div>
+      </div>
     </div>
-    <div class="skills">
-        <div class="container-fluid">
-            <div class="skills-wrap">
-                <div class="skills-card">
-                    FinTech
-                </div>
-                <div class="skills-card">
-                    Defi
-                </div>
-                <div class="skills-card">
-                    Saas
-                </div>
-                <div class="skills-card">
-                    b2C
-                </div>
-                <div class="skills-card">
-                    b2b
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="work">
-        <div class="container container-work">
-            <div class="work-title">
-                My works
-            </div>
-            <div class="work-wrap">
-                <div class="work-column">
-                    <div class="work-item">
-                        <img src="img/work-1.png" alt="">
-                    </div>
-                    <div class="work-item">
-                        <img src="img/work-2.png" alt="">
-                    </div>
-                </div>
-                <div class="work-column">
-                    <div class="work-item">
-                        <img src="img/work-3.png" alt="">
-                    </div>
-                    <div class="work-item">
-                        <img src="img/work-4.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="boost">
-        <div class="container-fluid">
-            <div class="boost-wrap">
-                <div class="boost-text">
-                    <div class="boost-title">
-                        Want to boost your UI/UX skills?
-                    </div>
-                    <div class="boost-descr">
-                        <p>
-                            If you are a beginner but want to become a professional and successful designer, then I will help you
-                        </p>
-                    </div>
-                   <a href="#" class="boost-btn">
-                       <span class="boost-btn_1"></span>
-                       <span class="boost-btn_2"></span>
-                       I WANT BE A PRO
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
     <div class="discuss">
         <div class="container-fluid">
             <div class="discuss-wrap">
@@ -323,8 +199,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="preloader">
         <div class="preloader-title">
             Wake up, samurai...
@@ -333,10 +207,11 @@
             76%
         </div>
     </div>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/script.js"></script>
-    <script type="module" src="js/queryLoader.js"></script>
 
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/script_404.js"></script>
+    <script type="module" src="js/queryLoader.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
