--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,16 @@
             </div>
         </div>
     </header>
+    <div id="box1" class="box">1. Классика
+        <span id="pointer1" class="box-pointer box-pointer-hidden">VADIM</span>
+        <div class="ch"></div>
+    </div>
+
+    <div id="box2" class="box">2. Через GPU
+        <span id="pointer2" class="box-pointer box-pointer2 box-pointer-hidden">VADIM</span>
+          <div class="ch"></div>
+      </div>
+
     <div class="exp">
         <div class="container">
             <div class="exp-wrap">
@@ -135,7 +145,7 @@
                             </p>
                         </div>
                     </div>
-    
+                    .<div id="circle"></div>
                     <div class="exp-image">
                         <img src="img/expirienc-image.png" alt="">
                     </div>
@@ -349,10 +359,9 @@
 
 
 
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
+
+
     <script type="module" src="js/queryLoader.js"></script>
 </body>
 </html>
