--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport">
@@ -122,16 +122,6 @@
             </div>
         </div>
     </header>
-    <div id="box1" class="box">1. Классика
-        <span id="pointer1" class="box-pointer box-pointer-hidden">VADIM</span>
-        <div class="ch"></div>
-    </div>
-
-    <div id="box2" class="box">2. Через GPU
-        <span id="pointer2" class="box-pointer box-pointer2 box-pointer-hidden">VADIM</span>
-          <div class="ch"></div>
-      </div>
-
     <div class="exp">
         <div class="container">
             <div class="exp-wrap">
@@ -147,7 +137,7 @@
                     </div>
                     .<div id="circle"></div>
                     <div class="exp-image">
-                        <img src="img/expirienc-image.png" alt="">
+                        <img src="img/expirienc-image.webp" alt="">
                     </div>
             </div>
         </div>
@@ -220,18 +210,18 @@
             <div class="work-wrap">
                 <div class="work-column">
                     <div class="work-item">
-                        <img src="img/work-1.png" alt="">
+                        <img src="img/work-1.webp" alt="">
                     </div>
                     <div class="work-item">
-                        <img src="img/work-2.png" alt="">
+                        <img src="img/work-2.webp" alt="">
                     </div>
                 </div>
                 <div class="work-column">
                     <div class="work-item">
-                        <img src="img/work-3.png" alt="">
+                        <img src="img/work-3.webp" alt="">
                     </div>
                     <div class="work-item">
-                        <img src="img/work-4.png" alt="">
+                        <img src="img/work-4.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -278,8 +268,7 @@
                 </div>
             </div>
         </div>
-    </div> 
-     
+    </div>  
     <div class="footer">
         <div class="container-fluid">
             <div class="footer-wrap">
@@ -334,8 +323,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="preloader">
         <div class="preloader-title">
             Wake up, samurai...
@@ -344,20 +331,6 @@
             76%
         </div>
     </div>
-
-
-    <div id="follower">Starts following once hovers</div>
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
