--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <!-- Favicon  -->
 
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/mobile.css" media="(max-width: 992px)"">
     <link rel="stylesheet" href="font/stylesheet.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
