--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,16 @@
     <meta property="og:title" content="Заголовок">
     <meta property="og:description" content="Онисание">
     <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
-
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://metatags.io/">
     <meta property="twitter:title" content="Заголовок">
     <meta property="twitter:description" content="Онисание">
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
-
     <!-- Favicon  -->
-
     <link rel="stylesheet" href="css/style.min.css">
-    <!-- <link rel="stylesheet" href="css/mobile.css" media="(max-width: 992px)""> -->
+    <link rel="stylesheet" href="css/mobile.css" media="(max-width: 992px)"">
     <link rel="stylesheet" href="font/stylesheet.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div class="menu">
@@ -329,14 +325,14 @@
             Wake up, samurai...
         </div>
         <div class="preloader-timer">
-            76%
+            0%
         </div>
     </div>
 
-
+    <script type="module" src="js/queryLoader.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
-    <script type="module" src="js/queryLoader.js"></script>
+
 </body>
 </html>
 
