--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,17 @@
     <link rel="stylesheet" href="font/stylesheet.css">
 </head>
 <body>
+    <div class="preloader">
+        <!-- <div class="preloader-title">
+            Wake up, samurai...
+        </div>
+        <div class="preloader-timer">
+            0%
+        </div> -->
+        <div class="preloader-card">
+           <img src="img/logo.svg" alt="" class="preloader-image">
+        </div>
+    </div>
     <div class="menu">
         <div class="container-fluid">
             <div class="menu-wrap">
@@ -57,7 +68,7 @@
                 </div>
 
                 <ul class="nav-list">
-                    <li class="nav-list-item"><a href="#">Mentoring</a><span class="nav-list-item__sale">SALE</span></li>
+                    <li class="nav-list-item"><a href="#">Mentoring</a><span class="nav-list-item__sale">(-50%)</span></li>
                     <li class="nav-list-item"><a href="#">Design Resources</a></li>
                 </ul>
 
@@ -107,12 +118,14 @@
     <header class="header">
         <div class="container-fluid">
             <div class="header-wrap">
-                <h3 class="header-name text__animation_1">
-                    Hi! I’m Vadim,
-                </h3>
-                <h1 class="header-title text__animation_2">
-                    ui/ux designer
-                </h1>
+                <div class="header-wrapper">
+                    <h3 class="header-name text__animation_1">
+                        Hi! I’m Vadim,
+                    </h3>
+                    <h1 class="header-title text__animation_2">
+                        ui/ux designer
+                    </h1>
+                </div>
                 <h3 class="header-subtitle text__animation_1">
                     ...for people who live on planet earth
                 </h3>
@@ -129,6 +142,8 @@
                         <div class="exp-descr">
                             <p>
                                 I have a passion for designing interfaces that solve user problems. And I will gladly solve your problem because this world needs to be made better.
+                                <br><br>
+                                I’m working with UI/UX, 3D modeling, AR Design, Interface Animations
                             </p>
                         </div>
                     </div>
@@ -149,23 +164,20 @@
                     <img src="icons/dtek.png" alt="">
                 </div>
                 <div class="partner-card">
-                    <img src="icons/lg.png" alt="">
+                    <img src="icons/logom.svg" alt="">
                 </div>
                 <div class="partner-card mb0">
-                    <img src="icons/dtek.png" alt="">
-                </div>
-                <div class="partner-card mb0">
-                    <img src="icons/lg.png" alt="">
+                    <img src="icons/defi.svg" alt="">
                 </div>
             </div>
         </div>
     </div>
     <div class="focus">
-        <div class="focus-card">
+        <!-- <div class="focus-card"> -->
             <div class="focus-title">
                 I focus on the business goals of your product
             </div>
-            <div class="focus-pepe">
+            <!-- <div class="focus-pepe">
                 <div class="focus-image">
                     <img src="img/pepe-1.gif" alt="">
                 </div>
@@ -174,9 +186,9 @@
 
                     </span>
                 </div>
-            </div>
+            </div> -->
 
-        </div>
+        <!-- </div> -->
     </div>
     <div class="skills">
         <div class="container-fluid">
@@ -202,7 +214,7 @@
     <div class="work">
         <div class="container container-work">
             <div class="work-title">
-                My works
+                Cases
             </div>
             <div class="work-wrap">
                 <div class="work-column">
@@ -320,14 +332,7 @@
             </div>
         </div>
     </div>
-    <div class="preloader">
-        <div class="preloader-title">
-            Wake up, samurai...
-        </div>
-        <div class="preloader-timer">
-            0%
-        </div>
-    </div>
+
 
     <script type="module" src="js/queryLoader.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
