add work hover... and..

--- a/src/index.html
+++ b/src/index.html
@@ -185,19 +185,19 @@
     <div class="skills">
         <div class="container-fluid">
             <div class="skills-wrap">
-                <div class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="700" class="skills-card">
                     FinTech
                 </div>
-                <div class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="800" class="skills-card">
                     Defi
                 </div>
-                <div class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="900" class="skills-card">
                     Saas
                 </div>
-                <div class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="1000" class="skills-card">
                     b2C
                 </div>
-                <div class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="1100" class="skills-card">
                     b2b
                 </div>
             </div>
@@ -211,9 +211,11 @@
             <div class="work-wrap">
                 <div class="work-column">
                     <div class="work-item">
+                        <span>1</span>
                         <img data-aos-delay="200" data-aos-duration="600" data-aos-easing="left-rotate" data-aos="work-image" data-hover2="Name of the Project" src="img/work-1.webp" alt="">
                     </div>
                     <div class="work-item">
+                        <span></span>
                         <img data-aos-delay="600" data-aos-duration="600" data-aos-easing="left-rotate" data-aos="work-image" data-hover2="Name of the Project" src="img/defiso.svg" alt="">
                     </div>
                 </div>
