add new version animate

--- a/src/index.html
+++ b/src/index.html
@@ -140,10 +140,10 @@
         <div class="container">
             <div class="exp-wrap">
                     <div class="exp-text">
-                        <h4 data-aos-easing="left-rotate" data-aos="left-rotate" class="exp-title">
+                        <h4 data-aos-easing="default" data-aos="standart" class="exp-title">
                             5+ years of <br> experience
                         </h4>
-                        <div data-aos-easing="left-rotate" data-aos="left-rotate" class="exp-descr">
+                        <div data-aos-easing="default" data-aos="standart" class="exp-descr">
                             <p>
                                 I have a passion for designing interfaces that solve user problems. And I will gladly solve your problem because this world needs to be made better.
                                 <br><br>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                     <div class="exp-image">
-                        <img   data-aos-easing="left-rotate" data-aos="rotate-scale" data-hover="It’s me 👋" src="img/expirienc-image.webp" alt="">
+                        <img data-aos-easing="default" data-aos="standart" data-hover="It’s me 👋" src="img/expirienc-image.webp" alt="">
                     </div>
             </div>
         </div>
@@ -160,23 +160,23 @@
     <div class="partner">
         <div class="container">
             <div class="partner-wrap">
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="700" class="partner-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="500" class="partner-card">
                     <img src="icons/lg.png" alt="">
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="800" class="partner-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="600" class="partner-card">
                     <img src="icons/dtek.png" alt="">
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="900" class="partner-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="700" class="partner-card">
                     <img src="icons/logom.svg" alt="">
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="1000" class="partner-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="800" class="partner-card">
                     <img src="icons/defi.svg" alt="">
                 </div>
             </div>
         </div>
     </div>
     <div class="focus">
-            <div data-aos-easing="left-rotate" data-aos="left-rotate" class="focus-title">
+            <div data-aos-easing="default" data-aos="standart" class="focus-title">
                 I focus on <br>
                 the business <br>
                 goals of your product
@@ -185,19 +185,19 @@
     <div class="skills">
         <div class="container-fluid">
             <div class="skills-wrap">
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="700" class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="500" class="skills-card">
                     FinTech
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="800" class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="600" class="skills-card">
                     Defi
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="900" class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="700" class="skills-card">
                     Saas
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="1000" class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="800" class="skills-card">
                     b2C
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="1100" class="skills-card">
+                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="900" class="skills-card">
                     b2b
                 </div>
             </div>
@@ -205,26 +205,26 @@
     </div>
     <div class="work">
         <div class="container container-work">
-            <div data-aos-delay="100" data-aos-easing="left-rotate" data-aos="left-rotate" data-aos-duration="700" class="work-title">
+            <div data-aos-easing="default" data-aos="standart"class="work-title">
                 Cases
             </div>
             <div class="work-wrap">
                 <div class="work-column">
                     <div class="work-item">
                         <span>1</span>
-                        <img data-aos-delay="200" data-aos-duration="600" data-aos-easing="left-rotate" data-aos="work-image" data-hover2="Name of the Project" src="img/work-1.webp" alt="">
+                        <img data-aos-delay="400" data-aos-easing="default" data-aos="standart" data-hover2="Name of the Project" src="img/work-1.webp" alt="">
                     </div>
                     <div class="work-item">
                         <span></span>
-                        <img data-aos-delay="600" data-aos-duration="600" data-aos-easing="left-rotate" data-aos="work-image" data-hover2="Name of the Project" src="img/defiso.svg" alt="">
+                        <img data-aos-delay="600" data-aos-easing="default" data-aos="standart" data-hover2="Name of the Project" src="img/defiso.svg" alt="">
                     </div>
                 </div>
                 <div class="work-column">
                     <div class="work-item">
-                        <img data-aos-delay="400" data-aos-duration="600" data-aos-easing="left-rotate" data-aos="work-image" data-hover2="Name of the Project" src="img/work-3.webp" alt="">
+                        <img data-aos-delay="500" data-aos-easing="default" data-aos="standart" data-hover2="Name of the Project" src="img/work-3.webp" alt="">
                     </div>
                     <div class="work-item">
-                        <img data-aos-delay="800" data-aos-duration="600" data-aos-easing="left-rotate" data-aos="work-image" data-hover2="Name of the Project" src="img/work-4.webp" alt="">
+                        <img data-aos-delay="700" data-aos-easing="default" data-aos="standart" data-hover2="Name of the Project" src="img/work-4.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -234,7 +234,7 @@
         <div class="container container-work">
             <div class="boost-wrap">
                 <div class="boost-text">
-                    <div data-aos-delay="100" data-aos-easing="left-rotate" data-aos-duration="1000" data-aos="left-rotate" class="boost-title">
+                    <div data-aos-easing="default" data-aos="standart" class="boost-title">
                         Want boost your UI/UX skills?
                     </div>
                     <div data-aos-delay="200" data-aos-easing="left-rotate" data-aos-duration="1000" data-aos="top-opacity" class="boost-descr">
@@ -254,20 +254,21 @@
     <div class="discuss">
         <div class="container-fluid">
             <div class="discuss-wrap">
-                <div data-aos-delay="100" data-aos-easing="left-rotate" data-aos="left-rotate" data-aos-duration="700" class="discuss-title">
+                <div data-aos-easing="default" data-aos="standart" class="discuss-title">
                     Let’s discuss something
                 </div>
 
-                <div data-aos-offset="100" data-aos-delay="200" data-aos-easing="left-rotate" data-aos-duration="800" data-aos="discuss-btn" class="discuss-btn">
-                    <span class="discuss-btn_hover">
-                        <span class="discuss-btn__text">
-                            Tap on me
+                <div data-aos-easing="default" data-aos="standart" class="discuss-wrapper">
+                    <div class="discuss-btn">
+                        <span class="discuss-btn_hover">
+                            <span class="discuss-btn__text">
+                                Tap on me
+                            </span>
                         </span>
-                    </span>
-
-                    <span class="discuss-btn_1"></span>
-                    <span class="discuss-btn_2"></span>
-                    <span class="discuss-btn_3"></span>
+                        <span class="discuss-btn_1"></span>
+                        <span class="discuss-btn_2"></span>
+                        <span class="discuss-btn_3"></span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -275,7 +276,7 @@
     <div class="footer">
         <div class="container-fluid">
             <div class="footer-wrap">
-                <div class="footer-block-wrap">
+                <div data-aos-offset="20" data-aos-easing="default" data-aos="standart" class="footer-block-wrap">
                     <div class="footer-name">
                         Portfolio 2021
                     </div>
@@ -283,7 +284,7 @@
                         Frontend developing by italik
                     </a>
                 </div>
-                <div class="footer-social">
+                <div data-aos-offset="20" data-aos-easing="default" data-aos="standart" class="footer-social">
                     <a href="mailto:vadim.uiux@gmail.com" class="footer-email">vadim.uiux@gmail.com</a>
 
                     <div class="footer-link__wrap">
