--- a/src/index.html
+++ b/src/index.html
@@ -160,16 +160,16 @@
     <div class="partner">
         <div class="container">
             <div class="partner-wrap">
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="500" class="partner-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="500" class="partner-card">
                     <img src="icons/lg.png" alt="">
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="600" class="partner-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="600" class="partner-card">
                     <img src="icons/dtek.png" alt="">
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="700" class="partner-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="700" class="partner-card">
                     <img src="icons/logom.svg" alt="">
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="800" class="partner-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="800" class="partner-card">
                     <img src="icons/defi.svg" alt="">
                 </div>
             </div>
@@ -185,19 +185,19 @@
     <div class="skills">
         <div class="container-fluid">
             <div class="skills-wrap">
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="500" class="skills-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="500" class="skills-card">
                     FinTech
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="600" class="skills-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="600" class="skills-card">
                     Defi
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="700" class="skills-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="700" class="skills-card">
                     Saas
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="800" class="skills-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="800" class="skills-card">
                     b2C
                 </div>
-                <div data-aos="partner" data-aos-easing="Ease-Both" data-aos-delay="900" class="skills-card">
+                <div data-aos-easing="default" data-aos="standart" data-aos-delay="900" class="skills-card">
                     b2b
                 </div>
             </div>
@@ -210,21 +210,19 @@
             </div>
             <div class="work-wrap">
                 <div class="work-column">
-                    <div class="work-item">
-                        <span>1</span>
-                        <img data-aos-delay="400" data-aos-easing="default" data-aos="standart" data-hover2="Name of the Project" src="img/work-1.webp" alt="">
+                    <div data-aos-delay="600" data-aos-easing="default" data-aos="standart" class="work-item">
+                        <img data-hover2="Name of the Project" src="img/work-1.webp" alt="">
                     </div>
-                    <div class="work-item">
-                        <span></span>
-                        <img data-aos-delay="600" data-aos-easing="default" data-aos="standart" data-hover2="Name of the Project" src="img/defiso.svg" alt="">
+                    <div data-aos-delay="600" data-aos-easing="default" data-aos="standart" class="work-item">
+                        <img data-hover2="Name of the Project" src="img/defiso.svg" alt="">
                     </div>
                 </div>
                 <div class="work-column">
-                    <div class="work-item">
-                        <img data-aos-delay="500" data-aos-easing="default" data-aos="standart" data-hover2="Name of the Project" src="img/work-3.webp" alt="">
+                    <div data-aos-delay="500" data-aos-easing="default" data-aos="standart" class="work-item">
+                        <img data-hover2="Name of the Project" src="img/work-3.webp" alt="">
                     </div>
-                    <div class="work-item">
-                        <img data-aos-delay="700" data-aos-easing="default" data-aos="standart" data-hover2="Name of the Project" src="img/work-4.webp" alt="">
+                    <div data-aos-delay="700" data-aos-easing="default" data-aos="standart" class="work-item">
+                        <img data-hover2="Name of the Project" src="img/work-4.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -237,12 +235,12 @@
                     <div data-aos-easing="default" data-aos="standart" class="boost-title">
                         Want boost your UI/UX skills?
                     </div>
-                    <div data-aos-delay="200" data-aos-easing="left-rotate" data-aos-duration="1000" data-aos="top-opacity" class="boost-descr">
+                    <div data-aos-easing="default" data-aos="standart" class="boost-descr">
                         <p>
                             If you are a beginner but want to become a professional and successful designer, then I will help you 
                         </p>
                     </div>
-                   <a data-aos-delay="100" data-aos-easing="left-rotate" data-aos-duration="1000" data-aos="top-opacity" href="#" class="boost-btn">
+                   <a data-aos-easing="default" data-aos="standart" href="#" class="boost-btn">
                        <span class="boost-btn_1"></span>
                        <span class="boost-btn_2"></span>
                        I WANT BE A PRO
@@ -276,7 +274,7 @@
     <div class="footer">
         <div class="container-fluid">
             <div class="footer-wrap">
-                <div data-aos-offset="20" data-aos-easing="default" data-aos="standart" class="footer-block-wrap">
+                <div data-aos-offset="10" data-aos-easing="default" data-aos="standart" class="footer-block-wrap">
                     <div class="footer-name">
                         Portfolio 2021
                     </div>
@@ -284,7 +282,7 @@
                         Frontend developing by italik
                     </a>
                 </div>
-                <div data-aos-offset="20" data-aos-easing="default" data-aos="standart" class="footer-social">
+                <div data-aos-offset="10" data-aos-easing="default" data-aos="standart" class="footer-social">
                     <a href="mailto:vadim.uiux@gmail.com" class="footer-email">vadim.uiux@gmail.com</a>
 
                     <div class="footer-link__wrap">
