--- a/src/index.html
+++ b/src/index.html
@@ -336,11 +336,18 @@
         </div>
       </div>
 
-
+    <!-- CDN code -->
+    <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script type="module" src="js/queryLoader.js"></script>
+    <!-- JQ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Scroll Smooth -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
+    
+    <!-- My js code -->
+    <script type="module" src="js/queryLoader.js"></script>
     <script src="js/cusror.js"></script>
+    <script src="js/scroll.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
