delay header animation, block show fix animate

--- a/src/index.html
+++ b/src/index.html
@@ -240,11 +240,14 @@
                             If you are a beginner but want to become a professional and successful designer, then I will help you 
                         </p>
                     </div>
-                   <a data-aos-easing="default" data-aos="standart" href="#" class="boost-btn">
-                       <span class="boost-btn_1"></span>
-                       <span class="boost-btn_2"></span>
-                       I WANT BE A PRO
-                    </a>
+                    <div data-aos-easing="default" data-aos="standart" class="boost-btn__wrap">
+                        <a href="#" class="boost-btn">
+                            <span class="boost-btn_1"></span>
+                            <span class="boost-btn_2"></span>
+                            I WANT BE A PRO
+                         </a>
+                    </div>
+                   
                 </div>
             </div>
         </div>
@@ -345,7 +348,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
 
     <!-- My js code -->
-    <script type="module" src="js/queryLoader.js"></script>
     <script src="js/cusror.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/script.js"></script>
