new version scroll

--- a/src/DEFIYield.html
+++ b/src/DEFIYield.html
@@ -64,11 +64,11 @@
             </div>
         </div>
     </div>
-    <nav class="nav ">
+    <nav class="nav nav-white">
         <div class="container-fluid">
             <div class="nav-wrap">
                 <div class="nav-logo">
-                    <img src="img/logo.svg" alt="Logo">
+                    <img src="img/black-logo.svg" alt="Logo">
                 </div>
                 <ul class="nav-list">
                     <li class="nav-list-item"><a href="#">Mentoring</a><span class="nav-list-item__sale">(-50%)</span></li>
@@ -113,6 +113,8 @@
             </div>
         </div>
     </nav>
+
+
 
     <div class="discuss">
         <div class="container-fluid">
@@ -192,27 +194,21 @@
     </div>
 
 
-    <div class="cursors">
-        <div style="left: 293px; top: 470px;">
-            <span class="cursor-1">Pattern #2</span>
-        </div>
-        <div style="left: 293px; top: 470px;">
-            <span class="cursor-2">NAME OF THE PROJECT</span>
-        </div>
-      </div>
+
 
     <!-- CDN code -->
     <!-- AOS -->
-    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- JQ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Scroll Smooth -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
 
     <!-- My js code -->
     <!-- <script src="js/cusror.js"></script> -->
-    <!-- <script src="js/scroll.js"></script> -->
-    <script src="js/script.js"></script>
+    <script src="js/scroll.js"></script>
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/defi-script.js"></script>
 </body>
 </html>
 
