--- a/src/index.html
+++ b/src/index.html
@@ -341,7 +341,7 @@
 
     <!-- CDN code -->
     <!-- Scroll Smooth -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script> -->
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- JQ -->
@@ -349,7 +349,7 @@
 
     <!-- My js code -->
     <script src="js/cusror.js"></script>
-    <script src="js/scroll.js"></script>
+    <!-- <script src="js/scroll.js"></script> -->
     <script src="js/script.js"></script>
 </body>
 </html>
