--- a/src/DEFIYield.html
+++ b/src/DEFIYield.html
@@ -114,7 +114,9 @@
         </div>
     </nav>
 
-
+    <div class="header-defi">
+      
+    </div>
 
     <div class="discuss">
         <div class="container-fluid">
