--- a/src/index.html
+++ b/src/index.html
@@ -348,8 +348,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- My js code -->
-    <script src="js/cusror.js"></script>
-    <!-- <script src="js/scroll.js"></script> -->
+    <!-- <script src="js/cusror.js"></script> -->
+    <script src="js/scroll.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
