--- a/src/index.html
+++ b/src/index.html
@@ -177,9 +177,7 @@
     </div>
     <div class="focus">
             <div data-aos-easing="default" data-aos="standart" class="focus-title">
-                I focus on <br>
-                the business <br>
-                goals of your product
+                I focus on the business goals of your product
             </div>
     </div>
     <div class="skills">
