remove scroll/ add new page 2560px

--- a/src/DEFIYield.html
+++ b/src/DEFIYield.html
@@ -114,9 +114,119 @@
         </div>
     </nav>
 
-    <div class="header-defi">
-      
-    </div>
+    <div class="container-defi">
+        <div class="header-defi">
+          <div class="header-defi-title">
+            DEFIYield
+          </div>
+          <div class="header-defi-text">
+              <div class="header-defi-descr">
+                <p>
+                  For people who live on planet earth For people who live on planet earth
+                </p>
+              </div>
+              <div class="header-defi-year">
+                2021
+              </div>
+          </div>
+        </div>
+
+        <div class="defi-1">
+          <div class="defi-1__image">
+            <img src="img/defi-1.png" alt="">
+          </div>
+        </div>
+
+        <div class="defi-2">
+          <div class="defi-2-image">
+            <img src="img/defi-2.png" alt="">
+          </div>
+          <div class="defi-2-text">
+            <div class="defi-2-title">
+              Overview
+            </div>
+            <div class="defi-2-descr">
+              <p>
+                Most of the Pleo product was built for use on web. But more and more we wanted employees to use the mobile app for their day-to-day usage. We were sending mixed messages as you could only create your account on web.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="defi-1">
+          <div class="defi-1__image">
+            <img src="img/defi-1.png" alt="">
+          </div>
+        </div>
+
+        <div class="defi-text">
+          <div class="defi-text__wrap">
+            <div class="defi-text-title">
+              Overview
+            </div>
+            <div class="defi-text-descr">
+              <p>
+                Most of the Pleo product was built for use on web. But more and more we wanted employees to use the mobile app for their day-to-day usage. We were sending mixed messages as you could only create your account on web.
+  
+                We wanted to start employees off on the right foot, and help them to get the most value from Pleo. 
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="defi-images">
+          <div class="defi-image"><img src="img/defi-2.png" alt=""></div>
+          <div class="defi-image"><img src="img/defi-2.png" alt=""></div>
+        </div>
+
+        <div class="defi-text">
+          <div class="defi-text__wrap">
+            <div class="defi-text-descr">
+              <p>
+                Most of the Pleo product was built for use on web. But more and more we wanted employees to use the mobile app for their day-to-day usage. We were sending mixed messages as you could only create your account on web.
+  
+                We wanted to start employees off on the right foot, and help them to get the most value from Pleo. 
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="defi-1">
+          <div class="defi-1__image">
+            <img src="img/defi-1.png" alt="">
+          </div>
+        </div>
+
+        <div class="check">
+          <div class="check-title">
+            Check this in live
+          </div>
+          <div class="check-buttons">
+            <a href="#" class="check-btn">
+              <div class="check-btn-image">
+                <img src="img/apple.svg" alt="">
+              </div>
+              <div class="check-btn-text">
+                <span>Soon on</span>
+                App Store
+              </div>
+            </a>
+            <a href="#" class="check-btn">
+              <div class="check-btn-image">
+                <img src="img/google-play-icon.svg" alt="">
+              </div>
+              <div class="check-btn-text">
+                <span>Soon on</span>
+                Google Play
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <a href="#" class="next-case">
+          Next case
+        </a>
+    </div> 
 
     <div class="discuss">
         <div class="container-fluid">
