--- a/src/index.html
+++ b/src/index.html
@@ -326,8 +326,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="cursors">
         <div style="left: 293px; top: 470px;">
             <span class="cursor-1">Pattern #2</span>
@@ -338,16 +336,13 @@
       </div>
 
     <!-- CDN code -->
-    <!-- Scroll Smooth -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script> -->
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- JQ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- My js code -->
-    <!-- <script src="js/cusror.js"></script> -->
-    <script src="js/scroll.js"></script>
+    <script src="js/cusror.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
